--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -2,6 +2,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+html {
+	background-color: #FFFEF8;
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -34,6 +37,10 @@ body {
 ol, ul {
 	list-style: none;
 }
+a {
+    text-decoration: none; 
+    color: inherit; 
+}
 blockquote, q {
 	quotes: none;
 }
@@ -57,6 +64,9 @@ header {
 	display: flex;
 	justify-content: space-between;
 	margin: 50px 0
+}
+header span {
+	font-weight: 700;
 }
 section {
 	margin: 50px 0
@@ -132,7 +142,6 @@ li:hover {
 	gap : 10px;
 	margin: 50px;
 }
-
 #portfolio button {
 	border-radius: 60px;
 	border: 1px solid #1D6154;
@@ -140,8 +149,7 @@ li:hover {
 	padding: 5px 20px;
 	background-color: white;
 }
-#portfolio button:hover, 
-#portfolio button:focus {
+#portfolio .filterSelected {
 	background-color: #1D6154;
 	color: white;
 }
@@ -198,10 +206,44 @@ input[type="submit"]{
 	text-align: center;
 	border-radius: 60px ;
 }
-
+footer {
+	background-color: white;
+}
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
 }
 
+/*****PAGE DE CONNEXION*****/
+#login {
+	width: 50%;
+	margin: auto;
+	padding: 100px 100px 180px 100px; 
+}
+#login > * {
+	text-align: center;
+
+}
+#login h2{
+	margin-bottom: 20px;
+}
+#login form {
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+}
+#login input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+#login label {
+	margin: 2em 0 1em 0;
+}
+
+#login p {
+	text-decoration: underline;
+	text-align: center;
+}
