--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -247,3 +247,9 @@ footer nav ul {
 	text-decoration: underline;
 	text-align: center;
 }
+#login .failed {
+	color: red;
+	font-weight: 700;
+	text-decoration: none;
+	margin-bottom: 20px;
+}
