--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -257,7 +257,6 @@ footer nav ul {
 .editionBar,.modifierElement {
 	visibility: hidden;
 }
-
 .editionBar {
     background-color: black;
     color: white;
@@ -267,14 +266,73 @@ footer nav ul {
     position: fixed;
     top: 0;
     left: 0;
+	z-index: 10;
 }
-/* .headerAdmin {
-	margin-top : 100px;
-} */
 .modifierElement {
 	color: black;
 	font-size: 14px;
 	font-family: 'Work Sans';
 	font-weight: 400;
 	margin-left: 30px;
+	cursor: pointer;
 }
+/*****MODAL*****/
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.modal {
+	font-size: 26px;
+	font-family: "Work Sans";
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+	position: relative;
+	width: 630px;
+}
+
+.modal-close {
+    margin-top: 15px;
+	background: none;
+    color: black;
+    border: none;
+    cursor: pointer;
+	position: absolute;
+	top : -20px;
+	right : 5px;
+}
+.modal-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	box-sizing: border-box;
+	padding: 40px;
+}
+.modalGallery {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 15px;
+	text-align: center;
+	margin-left: 55px;
+	margin-top: 30px;
+}
+.modalGallery figcaption {
+	display: none;
+}
+.modalGallery figure img {
+	width: 76px;
+	height: 102px;
+	object-fit: cover;
+}
+	
