--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -89,11 +89,22 @@ h1 > span {
 ;
 }
 
-h2, button{
+h2{
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
+}
+button {
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 30px;
+	color: #1D6154;
+	background-color: white;
+	border-radius: 60px;
+	border: 1px solid #1D6154;
+	font-size: 16px;
+	padding: 5px 20px;
 }
 nav ul {
 	display: flex;
@@ -141,13 +152,6 @@ li:hover {
 	justify-content: center;
 	gap : 10px;
 	margin: 50px;
-}
-#portfolio button {
-	border-radius: 60px;
-	border: 1px solid #1D6154;
-	font-size: 16px;
-	padding: 5px 20px;
-	background-color: white;
 }
 #portfolio .filterSelected {
 	background-color: #1D6154;
@@ -276,7 +280,7 @@ footer nav ul {
 	margin-left: 30px;
 	cursor: pointer;
 }
-/*****MODAL*****/
+/*****MODAL 1*****/
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -294,7 +298,6 @@ footer nav ul {
 	font-size: 26px;
 	font-family: "Work Sans";
     background: white;
-    padding: 20px;
     border-radius: 5px;
     text-align: center;
 	position: relative;
@@ -308,8 +311,10 @@ footer nav ul {
     border: none;
     cursor: pointer;
 	position: absolute;
-	top : -20px;
+	top : -6px;
 	right : 5px;
+	font-family: "Work Sans";
+	font-size: 24px;
 }
 .modal-content {
 	display: flex;
@@ -317,15 +322,18 @@ footer nav ul {
 	align-items: center;
 	width: 100%;
 	box-sizing: border-box;
-	padding: 40px;
+	padding: 70px 100px 50px 100px;
+
 }
 .modalGallery {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 15px;
-	text-align: center;
-	margin-left: 55px;
-	margin-top: 30px;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-row-gap: 20px;
+	margin-top: 50px;
+}
+.modalGallery figure {
+	position : relative;
 }
 .modalGallery figcaption {
 	display: none;
@@ -334,5 +342,27 @@ footer nav ul {
 	width: 76px;
 	height: 102px;
 	object-fit: cover;
+	cursor: pointer;
 }
-	
+.iconTrash {
+	position: absolute;
+	background-color: black;
+	color: white;
+	font-size : 10px;
+	border-radius: 5px;
+	z-index : 10;
+	padding :4px;
+	right: 8px;
+	top : 4px;
+}
+.modalLine {
+	border-bottom: 1px solid #B3B3B3;
+	width: 420px;
+	margin-top: 70px;
+}
+.addPictureButton {
+	background-color: #1D6154;
+	color: white;
+	margin-top: 50px;
+	padding : 10px 60px;
+}
