--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -145,13 +145,12 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin: 150px 0 16px 70px;
+	margin: 150px 0 50px 70px;
 }
 #portfolio nav {
 	display: flex;
 	justify-content: center;
 	gap : 10px;
-	margin: 50px;
 }
 #portfolio .filterSelected {
 	background-color: #1D6154;
@@ -163,6 +162,7 @@ li:hover {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	margin-top: 50px;
 }
 
 .gallery img {
@@ -323,7 +323,6 @@ footer nav ul {
 	width: 100%;
 	box-sizing: border-box;
 	padding: 70px 100px 50px 100px;
-
 }
 .modalGallery {
 	width: 100%;
@@ -334,13 +333,14 @@ footer nav ul {
 }
 .modalGallery figure {
 	position : relative;
+	width: 76px;
+	height: 102px;
 }
 .modalGallery figcaption {
 	display: none;
 }
 .modalGallery figure img {
-	width: 76px;
-	height: 102px;
+	width: 100%;
 	object-fit: cover;
 	cursor: pointer;
 }
@@ -350,7 +350,6 @@ footer nav ul {
 	color: white;
 	font-size : 10px;
 	border-radius: 5px;
-	z-index : 10;
 	padding :4px;
 	right: 8px;
 	top : 4px;
