--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -161,12 +161,13 @@ li:hover {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-row-gap:30px;
 	margin-top: 50px;
 }
-
 .gallery img {
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 #contact {
 	width: 50%;
@@ -341,6 +342,7 @@ footer nav ul {
 }
 .modalGallery figure img {
 	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	cursor: pointer;
 }
