--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -345,7 +345,6 @@ footer nav ul {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	cursor: pointer;
 }
 .iconTrash {
 	position: absolute;
@@ -356,6 +355,7 @@ footer nav ul {
 	padding :4px;
 	right: 8px;
 	top : 4px;
+	cursor: pointer;
 }
 .modalLine {
 	border-bottom: 1px solid #B3B3B3;
@@ -365,8 +365,10 @@ footer nav ul {
 .greenButton {
 	background-color: #1D6154;
 	color: white;
+	font-size: 14px;
 	margin-top: 50px;
 	padding : 10px 60px;
+	cursor: pointer;
 }
 
 /*****MODAL 2*****/
@@ -452,4 +454,15 @@ footer nav ul {
 	padding : 10px 60px;
 	border: none;
 	width: 237px;
+ }
+ #formContainer .greyButton {
+	background-color: #a7a7a7;
+	pointer-events: none;
+ }
+ .modal .iconArrow {
+	color: black;
+	position: absolute;
+	left : 30px;
+	top : 20px;
+	cursor: pointer;
  }
